--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -23,10 +23,13 @@
     <link href="~/AdminThem/assets/css/animate.css" rel="stylesheet" />
 
     <!-- Waves-effect -->
-    <link href="~/AdminThem/assets/css/waves-effect.css" rel="stylesheet">
+    <link href="~/AdminThem/assets/css/waves-effect.css" rel="stylesheet"/>
+    
+    @*for datatable Css*@
+    <link href="~/AdminThem/assets/datatables/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
 
     <!-- sweet alerts -->
-    <link href="~/AdminThem/assets/sweet-alert/sweet-alert.min.css" rel="stylesheet">
+    <link href="~/AdminThem/assets/sweet-alert/sweet-alert.min.css" rel="stylesheet"/>
 
     <!-- Custom Files -->
     <link href="~/AdminThem/assets/css/helper.css" rel="stylesheet" type="text/css" />
@@ -330,7 +333,7 @@
             <!-- Start content -->
             <div class="content">
                 <div class="container">
-                      @RenderBody()
+                    @RenderBody()
 
                 </div> <!-- container -->
 
@@ -460,7 +463,7 @@
     <!-- var resizefunc = []; -->
     <!-- </script> -->
     <!-- jQuery  -->
-    <script src="~/AdminThem/assets/js/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/AdminThem/assets/js/bootstrap.min.js"></script>
     <script src="~/AdminThem/assets/js/waves.js"></script>
     <script src="~/AdminThem/assets/js/wow.min.js"></script>
@@ -491,6 +494,7 @@
     <script src="~/AdminThem/assets/counterup/waypoints.min.js" type="text/javascript"></script>
     <script src="~/AdminThem/assets/counterup/jquery.counterup.min.js" type="text/javascript"></script>
 
+
     <!-- CUSTOM JS -->
     <script src="~/AdminThem/assets/js/jquery.app.js"></script>
 
@@ -502,9 +506,19 @@
 
     <!-- Todo -->
     <script src="~/AdminThem/assets/js/jquery.todo.js"></script>
-    
-@*/// Scripts jc in Indec --->productcategories*@
-@RenderSection("Scripts",false)
+
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+    <script src="~/AdminThem/assets/js/site.js"></script>
+
+    <script src="~/AdminThem/assets/js/persian-date.min.js"></script>
+    <script src="~/AdminThem/assets/js/persian-datepicker.min.js"></script>
+
+
+
+    @*/// Scripts jc in Indec --->productcategories*@
+    @RenderSection("Scripts", false)
 
 
 
