--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Index.cshtml
@@ -25,8 +25,8 @@
             <div class="panel-body">
                 <form class="form-inline" role="form" method="get">
                     <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Name" ></label>
-                        <input class="form-control"  placeholder="نام گروه محصولی" asp-for="SearchModel.Name">
+                        <label class="sr-only" asp-for="SearchModel.Name"></label>
+                        <input class="form-control" placeholder="نام گروه محصولی" asp-for="SearchModel.Name">
                     </div>
                     <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">جستجو</button>
                     <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">مشاهده همه</a>
@@ -47,33 +47,33 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <table id="datatable" class="table table-striped table-bordered">
                             <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>عکس</th>
-                                    <th>نام</th>
-                                    <th>تاریخ تولید</th>
-                                    <th>عملیات</th>
-                                </tr>
+                            <tr>
+                                <th>#</th>
+                                <th>عکس</th>
+                                <th>نام</th>
+                                <th>تاریخ تولید</th>
+                                <th>عملیات</th>
+                            </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in Model.ProductCategories)
-                                {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>
-                                            <img src="@item.Picture" style="width: 70px; height: 70px" />
-                                        </td>
-                                        <td>@item.Name</td>
-                                        <td>@item.CreationDate</td>
-                                        <td>
-                                            <a class="btn btn-warning pull-right m-rl-5"
-                       href="#showmodal=@Url.Page("./Index", "Edit", new { id = item.Id})">
-                        <i class="fa fa-edit"></i> ویرایش
-                    </a>
-                                        </td>
-                                    </tr>
+                            @foreach (var item in Model.ProductCategories)
+                            {
+                                <tr>
+                                    <td>@item.Id</td>
+                                    <td>
+                                        <img src="@item.Picture" style="width: 70px; height: 70px" />
+                                    </td>
+                                    <td>@item.Name</td>
+                                    <td>@item.CreationDate</td>
+                                    <td>
+                                        <a class="btn btn-warning pull-right m-rl-5"
+                                           href="#showmodal=@Url.Page("./Index", "Edit", new { id = item.Id})">
+                                            <i class="fa fa-edit"></i> ویرایش
+                                        </a>
+                                    </td>
+                                </tr>
 
-                                }
+                            }
 
 
                             </tbody>
@@ -84,3 +84,14 @@
         </div>
     </div>
 </div>
+@*//for DateTable Design*@
+@section Scripts {
+    <script src="~/adminThem/assets/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/adminThem/assets/datatables/dataTables.bootstrap.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#datatable').dataTable();
+        });
+    </script>
+}
