Edite Slide Menu admin

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -162,12 +162,12 @@
         <div class="left side-menu">
             <div class="sidebar-inner slimscrollleft">
                 <div class="user-details">
-                    <div class="pull-left">
+                    <div class="pull-right">
                         <img src="~/AdminTheme/assets/images/users/avatar-1.jpg" alt="" class="thumb-md img-circle">
                     </div>
                     <div class="user-info">
                         <div class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">John Doe <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">جان دو<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Profile<div class="ripple-wrapper"></div></a></li>
                                 <li><a href="javascript:void(0)"><i class="md md-settings"></i> Settings</a></li>
@@ -176,26 +176,28 @@
                             </ul>
                         </div>
 
-                        <p class="text-muted m-0">Administrator</p>
+                        <p class="text-muted m-0">مدیر سیسیتم</p>
                     </div>
                 </div>
                 <!--- Divider -->
                 <div id="sidebar-menu">
                     <ul>
                         <li>
-                            <a href="index.html" class="waves-effect active"><i class="md md-home"></i><span> Dashboard </span></a>
+                            <a href="index.html" class="waves-effect active"><i class="md md-home"></i><span> داشبورد </span></a>
                         </li>
 
                         <li class="has_sub">
-                            <a class="waves-effect"><i class="md md-mail"></i><span> Mail </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                            <a class="waves-effect"><i class="md md-mail"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="inbox.html">Inbox</a></li>
-                                <li><a href="email-compose.html">Compose Mail</a></li>
-                                <li><a href="email-read.html">View Mail</a></li>
+                                <li><a href="inbox.html">اسلایدر</a></li>
+                                <li><a href="inbox.html">گروه محصولات</a></li>
+                                <li><a href="email-compose.html">محصولات</a></li>
+                                <li><a href="email-read.html">عکس محصولات</a></li>
                             </ul>
                         </li>
-
-                        <li>
+                        
+                        @*oder menu*@
+                        @*<li>
                             <a href="calendar.html" class="waves-effect"><i class="md md-event"></i><span> Calendar </span></a>
                         </li>
 
@@ -318,7 +320,7 @@
                                     <a href="javascript:void(0);"><span>Menu Level 1.2</span></a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                     </ul>
                     <div class="clearfix"></div>
                 </div>
