--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -183,14 +183,14 @@
                 <div id="sidebar-menu">
                     <ul>
                         <li>
-                            <a href="index.html" class="waves-effect active"><i class="md md-home"></i><span> داشبورد </span></a>
+                            <a asp-page="/Index" class="waves-effect active"><i class="md md-home"></i><span> داشبورد </span></a>
                         </li>
 
                         <li class="has_sub">
                             <a class="waves-effect"><i class="md md-mail"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="inbox.html">اسلایدر</a></li>
-                                <li><a href="inbox.html">گروه محصولات</a></li>
+                                <li><a  asp-page="/Shop/ProductCategories/Index">گروه محصولات</a></li>
                                 <li><a href="email-compose.html">محصولات</a></li>
                                 <li><a href="email-read.html">عکس محصولات</a></li>
                             </ul>
