Add Edite productCategory

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -163,11 +163,11 @@
             <div class="sidebar-inner slimscrollleft">
                 <div class="user-details">
                     <div class="pull-right">
-                        <img src="~/AdminTheme/assets/images/users/avatar-1.jpg" alt="" class="thumb-md img-circle">
+                        <img src="~/AdminTheme/assets/images/users/Picture2.jpg" alt="" class="thumb-md img-circle">
                     </div>
                     <div class="user-info">
                         <div class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">جان دو<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">علی پازدار<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Profile<div class="ripple-wrapper"></div></a></li>
                                 <li><a href="javascript:void(0)"><i class="md md-settings"></i> Settings</a></li>
@@ -341,8 +341,8 @@
 
             </div> <!-- content -->
 
-            <footer class="footer text-right">
-                2015 © Moltran.
+            <footer class="footer text-center">
+                2022 ©  Ali Pazdar.
             </footer>
 
         </div>
