--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -471,8 +471,10 @@
             </div>
         </div>
     </div>
-
+    
+ @*Behtare az Akharin noskhe ke dar lib hast estefase kard*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+ 
     <script src="~/AdminTheme/assets/js/bootstrap.min.js"></script>
     <script src="~/AdminTheme/assets/js/waves.js"></script>
     <script src="~/AdminTheme/assets/js/wow.min.js"></script>
@@ -515,7 +517,9 @@
 
     <!-- Todo -->
     <script src="~/AdminTheme/assets/js/jquery.todo.js"></script>
+    
 
+    @*//Aavlin kar dar validate*@ 
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     
