--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Index.cshtml
@@ -51,7 +51,7 @@
                                 <th>#</th>
                                 <th>عکس</th>
                                 <th>نام</th>
-                                <th>تاریخ تولید</th>
+                                <th>تاریخ ثبت</th>
                                 <th>عملیات</th>
                             </tr>
                             </thead>
@@ -61,7 +61,7 @@
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>
-                                        <img src="@item.Picture" style="width: 70px; height: 60px" />
+                                        <img src="@item.Picture" style="width: 90px; height: 70px" />
                                     </td>
                                     <td>@item.Name</td>
                                     <td>@item.CreationDate</td>
