--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
@@ -7,7 +7,7 @@
     <h4 class="modal-title">ویرایش گروه محصول : @Model.Name</h4>
 </div>
 @*//jahat estefad dar site.js --->data-ajax="true"*@
-<form asp-page="./Index" asp-page-handler="Edit"
+<form asp-page="./Index" asp-page-handler="EditProduct"
       method="post"
       data-ajax="true"
       data-callback=""
