--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Products/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Products/Index.cshtml
@@ -36,13 +36,19 @@
                     <div class="form-group">
                         <label class="sr-only" asp-for="SearchModel.CategoryId"></label>
                         <select class="form-control"  asp-for="SearchModel.CategoryId" asp-items="Model.Productcategories">
-                         <option value="0">گروه محصول</option>
+                            <option value="0">گروه محصول</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">جستجو</button>
                     <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">مشاهده همه</a>
                 </form>
+                @if (@Model.Messege != null)
+            {
+                <h4>@Model.Messege dggsgfsgfgsfdgsfdgdsdgfdgf</h4>
+            }
+                
             </div>
+
         </div>
     </div>
 </div>
@@ -64,6 +70,7 @@
                                     <th>نام</th>
                                     <th>کد</th>
                                     <th>قیمت</th>
+                                    <th>موجودی</th>
                                     <th>گروه</th>
                                     <th>تاریخ ثبت</th>
                                     <th>عملیات</th>
@@ -75,20 +82,42 @@
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>
-                                        <img src="@item.Picture" style="width: 70px; height: 70px" />
+                                        <img src="@item.Picture" style="width: 50px; height: 70px" />
                                     </td>
                                     <td>@item.Name</td>
                                     <td>@item.Code</td>
                                     <td>@item.UnitPrice</td>
+                                    <td class="text-center">
+                                        @if (item.IsInStock)
+                                        {
+                                            <i class="fa fa-check fa-2x text-success"></i>
+                                            
+                                        }
+                                        else
+                                        {
+                                            <i class="fa fa-remove fa-2x text-danger"></i>
+                                        }
+                                    </td>
                                     <td>@item.Category</td>
                                     <td>@item.CreationDate</td>
                                     <td>
                                         @*href="#showmodal=@Url.Page("./Index","EditProduct",new {id=@item.Id})"*@
                                         @*mige be Page Index boro va fun EditProduct ro seda bezan va Id ro ham begir*@
-                                        <a class="btn btn-warning pull-right m-rl-5"
+                                        <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
+                                        @if (item.IsInStock)
+                                        {
+                                            <a class="btn btn-danger btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
+                                               asp-page-handler="NotInStock">اتمام موجودی!</a>
+                                        }
+                                        else
+                                        {
+                                            <a class="btn btn-success btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
+                                               asp-page-handler="IsInStock"> موجود شد!</a>
+                                        }
+                                       
                                     </td>
                                 </tr>
 
