--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductPictures/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductPictures/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@page
-@model ServiceHost.Areas.Administration.Pages.Shop.Products.IndexModel
+@model ServiceHost.Areas.Administration.Pages.Shop.ProductPictures.IndexModel
 @{
 }
 @{
     Layout = "Shared/_AdminLayout";
-    ViewData["title"] = "مدیریت محصولات";
+    ViewData["title"] = "مدیریت  عکس محصولات";
 }
 
 <div class="row">
     <div class="col-sm-12">
         <h4 class="page-title pull-right">@ViewData["title"]</h4>
         <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد محصول جدید</a>
+            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")">ایجاد عکس محصول جدید</a>
         </p>
     </div>
 </div>
@@ -26,25 +26,18 @@
                 <form class="form-inline" role="form" method="get">
                     @*//Search By*@
                     <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Name"></label>
-                        <input class="form-control" placeholder="نام گروه محصولی" asp-for="SearchModel.Name">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Code"></label>
-                        <input class="form-control" placeholder="کد" asp-for="SearchModel.Code">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.CategoryId"></label>
-                        <select class="form-control"  asp-for="SearchModel.CategoryId" asp-items="Model.Productcategories">
-                            <option value="0">گروه محصول</option>
+                        <label class="sr-only" asp-for="SearchModel.ProductId"></label>
+                        <select class="form-control"  asp-for="SearchModel.ProductId" asp-items="Model.Products">
+                            <option value="0"> .....محصول</option>
                         </select>
                     </div>
+
                     <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">جستجو</button>
                     <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">مشاهده همه</a>
                 </form>
-                @if (@Model.Messege != null)
+                @if (@Model.Message != null)
             {
-                <h4>@Model.Messege dggsgfsgfgsfdgsfdgdsdgfdgf</h4>
+                <h4>@Model.Message dggsgfsgfgsfdgsfdgdsdgfdgf</h4>
             }
                 
             </div>
@@ -57,7 +50,7 @@
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">لیست محصولات</h3>
+                <h3 class="panel-title">لیست عکس محصولات</h3>
             </div>
             <div class="panel-body">
                 <div class="row">
@@ -68,56 +61,52 @@
                                     <th>#</th>
                                     <th>عکس</th>
                                     <th>نام</th>
-                                    <th>کد</th>
-                                    <th>قیمت</th>
-                                    <th>موجودی</th>
-                                    <th>گروه</th>
                                     <th>تاریخ ثبت</th>
+                                    <th>وضعیت</th>
                                     <th>عملیات</th>
                                 </tr>
                             </thead>
                             <tbody>
-                            @foreach (var item in Model.Products)
+                            @foreach (var item in Model.ProductPictures)
                             {
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>
                                         <img src="@item.Picture" style="width: 50px; height: 70px" />
                                     </td>
-                                    <td>@item.Name</td>
-                                    <td>@item.Code</td>
-                                    <td>@item.UnitPrice</td>
-                                    <td class="text-center">
-                                        @if (item.IsInStock)
+                                    <td>@item.Product</td>
+                                    <td>@item.CreationDate</td>
+                                    <td>
+                                        @if (!item.IsRemoved)
                                         {
                                             <i class="fa fa-check fa-2x text-success"></i>
-                                            
                                         }
                                         else
                                         {
                                             <i class="fa fa-remove fa-2x text-danger"></i>
                                         }
                                     </td>
-                                    <td>@item.Category</td>
-                                    <td>@item.CreationDate</td>
                                     <td>
+                                       
+
                                         @*href="#showmodal=@Url.Page("./Index","EditProduct",new {id=@item.Id})"*@
                                         @*mige be Page Index boro va fun EditProduct ro seda bezan va Id ro ham begir*@
                                         <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
-                                        @if (item.IsInStock)
+
+                                        @if (!item.IsRemoved)
                                         {
                                             <a class="btn btn-danger btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
-                                               asp-page-handler="NotInStock">اتمام موجودی!</a>
+                                               asp-page-handler="Remove">حذف</a>
                                         }
                                         else
                                         {
                                             <a class="btn btn-success btn-rounded waves-effect waves-light m-b-5" asp-page="./Index" asp-route-id="@item.Id"
-                                               asp-page-handler="IsInStock"> موجود شد!</a>
+                                               asp-page-handler="Restore">فعال سازی</a>
                                         }
-                                       
+
                                     </td>
                                 </tr>
 
