Add Ui Slide (Create-Edite-Remove)

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductPictures/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductPictures/Create.cshtml
@@ -4,7 +4,7 @@
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h4 class="modal-title">ایجاد عکس محصول جدید:@Model.Picture</h4>
+    <h4 class="modal-title">ایجاد عکس محصول جدید:@Model.PictureAlt</h4>
 </div>
 @*//jahat estefad dar site.js --->data-ajax="true"*@
 <form asp-page="./Index" asp-page-handler="Create"
