--- a/LampShade/ServiceHost/Pages/Index.cshtml
+++ b/LampShade/ServiceHost/Pages/Index.cshtml
@@ -5,9 +5,6 @@
 }
 
 
-
-
-
 <div class="hero-slider-area section-space">
     <div class="container wide">
         <div class="row">
@@ -2113,3 +2110,4 @@
         </div>
     </div>
 </div>
+<!--====================  End of newsletter area  ====================-->
