--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Index.cshtml
@@ -35,6 +35,7 @@
                                     <th>سرتیتر</th>
                                     <th>عنوان</th>
                                     <th>تاریخ</th>
+                                    <th>وضعیت</th>
                                     <th>عملیات</th>
                                 </tr>
                             </thead>
