--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Create.cshtml
@@ -86,6 +86,17 @@
             </div>
         </div>
         @*row*@
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="Link" class="control-label">لینک</label>
+                    <input type="text" class="form-control" asp-for="Link">
+                    <span asp-validation-for="Link" class="error"></span>
+                </div>
+            </div>
+           
+        </div>
+        @*row*@
 
     </div>
     <div class="modal-footer">
