--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Create.cshtml
@@ -1,13 +1,13 @@
-﻿@model DiscountManagement.Application.Contract.CustomerDiscount.EditCustomerDiscount
+﻿@model DiscountManagement.Application.Contract.CustomerDiscount.DefineCustomerDiscount
 @{
 }
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h4 class="modal-title">ویرایش تخفیف مشتری </h4>
+    <h4 class="modal-title">تعریف تخفیف مشتری جدید</h4>
 </div>
 @*//jahat estefad dar site.js --->data-ajax="true"*@
-<form asp-page="./Index" asp-page-handler="Edit"
+<form asp-page="./Index" asp-page-handler="Create"
       method="post"
       data-ajax="true"
       data-callback=""
@@ -20,7 +20,7 @@
                     <label asp-for="ProductId" class="control-label"> انتخاب محصول</label>
                     @* برای اینکه از تکنولوژی ام وی سی در کانترکت کریت استفاده نکنیم و وابستگی ایجاد نکنیم *@
                     @* از این روش استفاده کردیم *@
-                    <select class="form-control" asp-for="ProductId"
+                    <select class="form-control" asp-for="ProductId" 
                             asp-items='new SelectList(Model.Products,"Id","Name")'>
                         <option value="0">انتخاب محصول</option>
                     </select>
@@ -35,25 +35,25 @@
                     <span asp-validation-for="DiscountRate" class="error"></span>
                 </div>
             </div>
-
+            
         </div>
         @* در هر کلاس رو رو کلاس ام دی 6 بیشتر جا نمیگیره *@
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="StartDate" class="control-label">تاریخ شروع</label>
-                    <input class="form-control PersianDateInput" asp-for="StartDate">
-                    <span asp-validation-for="StartDate" class="error"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="EndDate" class="control-label">تاریخ پایان</label>
-                    <input class="form-control PersianDateInput" asp-for="EndDate">
-                    <span asp-validation-for="EndDate" class="error"></span>
-                </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="StartDate" class="control-label">تاریخ شروع</label>
+                <input class="form-control PersianDateInput" asp-for="StartDate">
+                <span asp-validation-for="StartDate" class="error"></span>
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="EndDate" class="control-label">تاریخ پایان</label>
+                <input class="form-control PersianDateInput" asp-for="EndDate">
+                <span asp-validation-for="EndDate" class="error"></span>
+            </div>
+        </div>
+    </div>
         @*row*@
 
         <div class="row">
@@ -66,10 +66,9 @@
                 </div>
             </div>
         </div>  @*row*@
-        <input type="hidden" asp-for="Id" value="@Model.Id"/>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
-        <button type="submit" class="btn btn-info waves-effect waves-light">ویرایش</button>
+        <button type="submit" class="btn btn-info waves-effect waves-light">تعریف</button>
     </div>
 </form>
