--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ServiceHost.Areas.Administration.Pages.Discounts.CustomerDiscounts.IndexModel
+@model Areas.Administration.Pages.Discounts.CustomerDiscounts.IndexModel
 @{
     Layout = "Shared/_AdminLayout";
     ViewData["title"] = "مدیریت تخفیفات مشتریان";
