اضافه کردن دکمه ادیت

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Index.cshtml
@@ -69,7 +69,7 @@
                                     <th>تاریخ پایان</th>
                                     <th>علت تخفیف</th>
                                     <th>تاریخ تولید</th>
-                                    @*<th>عملیات</th>*@
+                                    <th>عملیات</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -83,6 +83,12 @@
                                     <td>@item.EndDate</td>
                                     <td>@item.Reason</td>
                                     <td>@item.CreationDate</td>
+                                    <td>
+                                        <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
+                                           href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
+                                            <i class="fa fa-edit"></i> ویرایش
+                                        </a>
+                                    </td>
                                 </tr>
 
                             }
