اصلاحیه تا پایان سژن 13

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/ColleagueDiscounts/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/ColleagueDiscounts/Index.cshtml
@@ -65,7 +65,7 @@
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>@item.Product</td>
-                                    <td>@item.DiscountRate</td>
+                                    <td>@item.DiscountRate%</td>
                                     <td>@item.CreationDate</td>
                                     <td>
                                         <a class="btn btn-warning btn-rounded waves-effect waves-light m-b-5"
