--- a/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Edit.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Edit.cshtml
@@ -4,40 +4,34 @@
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h4 class="modal-title">ویرایش تخفیف مشتری </h4>
+    <h4 class="modal-title">ویرایش تخفیف مشتری</h4>
 </div>
-@*//jahat estefad dar site.js --->data-ajax="true"*@
+
 <form asp-page="./Index" asp-page-handler="Edit"
       method="post"
       data-ajax="true"
       data-callback=""
-      data-action="Refresh"
-      enctype="multipart/form-data">
+      data-action="Refresh">
     <div class="modal-body">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label asp-for="ProductId" class="control-label"> انتخاب محصول</label>
-                    @* برای اینکه از تکنولوژی ام وی سی در کانترکت کریت استفاده نکنیم و وابستگی ایجاد نکنیم *@
-                    @* از این روش استفاده کردیم *@
+                    <label asp-for="ProductId" class="control-label">انتخاب محصول</label>
                     <select class="form-control" asp-for="ProductId"
-                            asp-items='new SelectList(Model.Products,"Id","Name")'>
+                            asp-items='new SelectList(Model.Products, "Id", "Name")'>
                         <option value="0">انتخاب محصول</option>
                     </select>
-                    <span asp-validation-for="Products" class="error"></span>
+                    <span asp-validation-for="ProductId" class="error"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="DiscountRate" class="control-label">درصد تخفیف</label>
-                    @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
                     <input type="text" class="form-control" asp-for="DiscountRate">
                     <span asp-validation-for="DiscountRate" class="error"></span>
                 </div>
             </div>
-
         </div>
-        @* در هر کلاس رو رو کلاس ام دی 6 بیشتر جا نمیگیره *@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
@@ -54,8 +48,6 @@
                 </div>
             </div>
         </div>
-        @*row*@
-
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group no-margin">
@@ -65,8 +57,8 @@
                     <span asp-validation-for="Reason" class="error"></span>
                 </div>
             </div>
-        </div>  @*row*@
-        <input type="hidden" asp-for="Id" value="@Model.Id"/>
+        </div>
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
