--- a/LampShade/ServiceHost/Areas/Administration/Pages/Inventory/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Inventory/Index.cshtml
@@ -80,7 +80,14 @@
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = @item.Id})">
                                             <i class="fa fa-edit"></i> ویرایش
                                         </a>
-                                        
+                                        <a class="btn btn-success btn-rounded waves-effect waves-light m-b-5"
+                                           href="#showmodal=@Url.Page("./Index", "Increase", new {id = @item.Id})">
+                                            <i class="fa fa-plus"></i> افزایش موجودی
+                                        </a>
+                                        <a class="btn btn-danger btn-rounded waves-effect waves-light m-b-5"
+                                           href="#showmodal=@Url.Page("./Index", "Reduce", new {id = @item.Id})">
+                                            <i class="fa fa-minus"></i> کاهش موجودی
+                                        </a>
                                     </td>
                                 </tr>
 
