پابلیش کردن هدر سایت فعلا بدون اتصال به بانک

--- a/LampShade/ServiceHost/Pages/ProductCategory.cshtml
+++ b/LampShade/ServiceHost/Pages/ProductCategory.cshtml
@@ -127,7 +127,8 @@
                                                         }
                                                     </p>
                                                     @if (@product.HasDiscouont)
-                                                    {
+                                                            {
+                                                        //کلاس شمارنده تخفیفات
                                                         <div class="product-countdown" data-countdown="@product.DiscountExpireDate"></div>
 
                                                     }
